--- a/phone_price2-1--copy.Rmd
+++ b/phone_price2-1--copy.Rmd
@@ -1,5 +1,8 @@
 ---
-output: pdf_document
+title: "Classification for phone prices"
+author: "XIAO MA, HAO ZHENG, YONGZI YU"
+date: "05/09/2022"
+output: word_document
 ---
 
 ```{r setup, include=FALSE}
@@ -42,7 +45,7 @@ library(cutpointr)
 
 ```{r}
 # read data
-df = read.csv("train.csv")
+df = read.csv("data/train.csv")
 
 # covert outcome to binary
 df$price_range = as.factor(ifelse(df$price_range >=2, "High", "Low"))
@@ -223,13 +226,15 @@ cft = confusionMatrix(test_df$pred.gbm, test_df$price_range)
 print(cft)
 ```
 
-In order to predict the high cost phone, we decided to build a binary classification model. We randomly divided our dataset into two data sets before training the classification algorithms: the training and the test sets. The training and test sets each included 80% and 20% of the total data, respectively. The parameters of each algorithm were determined based on the classification performance of the training set as measured by five-fold cross-validation. On the test set, the performance of all algorithms was tested and compared. We evaluated and compared the results of five different algorithms since different classification methods are better suited to different types of data. Bagging, random forest, ada boosting, and radical kernel SVM are among the models under consideration.
+* In order to predict the high cost phone, we decided to build a binary classification model. We randomly divided our dataset into two data sets before training the classification algorithms: the training and the test sets. The training and test sets each included 80% and 20% of the total data, respectively. 
 
-We plotted the ROC curves of all the different algorithms on the test dataset. Over all reasonable sensitivity thresholds and recall thresholds, the ada boosting model is consistently better than all the other models. The feature importance of the ADA boosting model is scaled between 0 and 100. Random access memory (RAM) is the most important predictor. Battery power is 20% as important as RAM. Pixel height and pixel width are each around 10% as important as RAM. All the other predictors are less than 5% as important as RAM.
+* The parameters of each algorithm were determined based on the classification performance of the training set as measured by five-fold cross-validation. On the test set, the performance of all algorithms was tested and compared. We evaluated and compared the results of five different algorithms since different classification methods are better suited to different types of data. Bagging, random forest, ada boosting, and radical kernel SVM are among the models under consideration.
 
-For the first six test cases and label combinations, we utilized LIME to visually represent the explanations. Positively associated features are displayed in blue, while negatively correlated features are displayed in red. We can observe that all of the predictors for the phone pricing outcome selected the same features, showing that these are important features both locally and globally.
+* We plotted the ROC curves of all the different algorithms on the test dataset. Over all reasonable sensitivity thresholds and recall thresholds, the ada boosting model is consistently better than all the other models. The feature importance of the ADA boosting model is scaled between 0 and 100. Random access memory (RAM) is the most important predictor. Battery power is 20% as important as RAM. Pixel height and pixel width are each around 10% as important as RAM. All the other predictors are less than 5% as important as RAM.
 
-We selected to maximize the sum of sensitivity and specificity in order to determine the best cut point for the prediction probability. On the training dataset, the best cut point is `r cp$optimal_cutpoint`, which yields an accuracy of `r cp$acc`, a sensitivity of `r cp$sensitivity`, and a specificity of `r cp$specificity`. On the test dataset, we have an accuracy of `r cft$overall[1]`, sensitivity of `r cft$byClass[1]`, and specificity of `r cft$byClass[2]` using the optimal cut point. As a consequence, our model appears to be extremely effective in predicting high prices for phones.
+* For the first six test cases and label combinations, we utilized LIME to visually represent the explanations. Positively associated features are displayed in blue, while negatively correlated features are displayed in red. We can observe that all of the predictors for the phone pricing outcome selected the same features, showing that these are important features both locally and globally.
+
+* We selected to maximize the sum of sensitivity and specificity in order to determine the best cut point for the prediction probability. On the training dataset, the best cut point is `r cp$optimal_cutpoint`, which yields an accuracy of `r cp$acc`, a sensitivity of `r cp$sensitivity`, and a specificity of `r cp$specificity`. On the test dataset, we have an accuracy of `r cft$overall[1]`, sensitivity of `r cft$byClass[1]`, and specificity of `r cft$byClass[2]` using the optimal cut point. As a consequence, our model appears to be extremely effective in predicting high prices for phones.
 
 
 
