update classification model

--- a/phone_price2-1--copy.Rmd
+++ b/phone_price2-1--copy.Rmd
@@ -230,9 +230,9 @@ print(cft)
 
 * The parameters of each algorithm were determined based on the classification performance of the training set as measured by five-fold cross-validation. On the test set, the performance of all algorithms was tested and compared. We evaluated and compared the results of five different algorithms since different classification methods are better suited to different types of data. Bagging, random forest, ada boosting, and radical kernel SVM are among the models under consideration.
 
-* We plotted the ROC curves of all the different algorithms on the test dataset. Over all reasonable sensitivity thresholds and recall thresholds, the ada boosting model is consistently better than all the other models. The feature importance of the ADA boosting model is scaled between 0 and 100. Random access memory (RAM) is the most important predictor. Battery power is 20% as important as RAM. Pixel height and pixel width are each around 10% as important as RAM. All the other predictors are less than 5% as important as RAM.
+* We plotted the ROC curves of all the different algorithms on the test dataset. Over all reasonable sensitivity thresholds and recall thresholds, the ada boosting model is consistently better than all the other models. The feature importance of the ADA boosting model is scaled between 0 and 100. Random access memory (RAM) is the most important predictor since the importance value goes to 100. Battery power is 20% as important as RAM. Pixel height and pixel width are each around 10% as important as RAM. All the other predictors are less than 5% as important as RAM.
 
-* For the first six test cases and label combinations, we utilized LIME to visually represent the explanations. Positively associated features are displayed in blue, while negatively correlated features are displayed in red. We can observe that all of the predictors for the phone pricing outcome selected the same features, showing that these are important features both locally and globally.
+* For the first six test cases and label combinations, we utilized LIME to visually represent the explanations for the relationship between mobile phone price level and features. Positively associated features are displayed in blue, while negatively correlated features are displayed in red. For example, case 30, which refers to the row 30 of the test data, has the highest explanation fit 0.40. Label which is high means this case is for predicting the high price mobile phone. 'RAM smaller than 1209' feature which is red color implies the phone with this 'RAM smaller than 1209' feature has large possibility that it does not belong to the high price phone. For case 18, label which is high is for predicting the high price mobile phone. 'RAM > 3033' feature which is blue color implies the phone with this  'RAM > 3033' feature has large possibility that it belongs to high price phone. We can also observe that all of the predictors for the phone pricing outcome selected the same features, showing that these are important features both locally and globally. For example, these features include ram, battery power, talking time, pixel height, pixel width, 3g internet, WiFi, Bluetooth.
 
 * We selected to maximize the sum of sensitivity and specificity in order to determine the best cut point for the prediction probability. On the training dataset, the best cut point is `r cp$optimal_cutpoint`, which yields an accuracy of `r cp$acc`, a sensitivity of `r cp$sensitivity`, and a specificity of `r cp$specificity`. On the test dataset, we have an accuracy of `r cft$overall[1]`, sensitivity of `r cft$byClass[1]`, and specificity of `r cft$byClass[2]` using the optimal cut point. As a consequence, our model appears to be extremely effective in predicting high prices for phones.
 
