--- a/phone_price2-1--copy.Rmd
+++ b/phone_price2-1--copy.Rmd
@@ -122,9 +122,6 @@ barplot(sort(ranger::importance(bagging.final.imp), decreasing = FALSE),
         las = 2, horiz = TRUE, cex.names = 0.7,
         col = colorRampPalette(colors = c("cyan", "blue"))(20))
 ```
-Since we have response variables, we consider the problem to be supervised learning. Therefore, the unsupervised learning methods (such as clustering and deep learning) are not suitable for this problem.
-
-For the models we learned in the second half of this semester, we start with Bagging for classification problem. Bagging is a method which use bootstrap to reduce the variance. Though bagging can improve the predictive accuracy, it may be difficult to interpret since it's impossible to represent the results as a single tree. In the classification setting, we used Gini index to obtain the variable importance information, predictors with the larger total decrease in the Gini index are considered more important. Here, we use caret to do grid search, then choose the node size with the highest ROC value.
 
 
 ## Random forest
@@ -150,8 +147,6 @@ rf.fit <- train(price_range ~ . ,
 ggplot(rf.fit, highlight = TRUE)
 ```
 
-After analyzing the variable importance in the bagging model, we realize that the variable `ram` is of great importance, which may cause bagging less valid in decreasing the variance since all of the bagged trees will look quite similar with top split at `ram`. Therefore, we fit a random forest model, which is an improved method of bagging by decorrelating the trees. It only consider a subset of predictors at each split so as to make the bagged trees less correlated with each other.
-
 
 ## AdaBoost
 
@@ -175,30 +170,11 @@ gbm.fit <- train(price_range ~ . ,
 ```{r}
 ggplot(gbm.fit, highlight = TRUE)
 ```
-Next, because the outcome of the mobile dataset is binary, we fit a gbm model to do boosting. Boosting is quite similar to bagging except it build trees using information from the previous tree. There are three tuning parameters in boosting: The number of trees B, which are selected using cross-validation; Shrinkage parameter $\lambda$ which controls the learning rate; And d, the number of splits in each tree which controls the complexity. From the result, we can see that the optimal situation is reached when B = 5000, $\lambda$ = 0.002, d = 5.
 
 
 ## SVM
 
 ```{r }
-# Tune over both cost and sigma
-# set.seed(1)
-# svmr.fit <- train(price_range ~ . , 
-#                   df, 
-#                   subset = train_index, 
-#                   method = "svmRadialSigma",
-#                   tuneGrid = data.frame(C = exp(seq(-1,4,len=20)),
-#                                         sigma = exp(seq(-6,-2,len=20))),
-#                   trControl = ctrl,
-#                   metric = "ROC",
-#                   prob.model = TRUE,
-#                   verbose = FALSE)
-# myCol <- rainbow(20)
-# myPar <- list(surpose.symbol = list(col = myCol),
-#               surpose.line = list(col = myCol))
-# plot(svmr.fit, highlight = TRUE, par.settings = myPar)
-
-
 # Tune over cost
 set.seed(1)
 svm.fit = train(price_range ~ . , 
@@ -216,7 +192,6 @@ summary(svm.fit)
 ```{r}
 plot(svm.fit)
 ```
-Now consider to fit another classic classification model: support vector machine with radical kernel. There are two tuning parameters for SVM, cost and sigma. Here, we only tune on cost.
 
 
 ## ROC camparison
@@ -279,6 +254,15 @@ test_df$pred.gbm = as.factor(ifelse(pred.gbm > cp$optimal_cutpoint, "High", "Low
 cft = confusionMatrix(test_df$pred.gbm, test_df$price_range)
 print(cft)
 ```
+* Since we have response variables, we consider the problem to be supervised learning. Therefore, the unsupervised learning methods (such as clustering and deep learning) are not suitable for this problem.
+
+* For the models we learned in the second half of this semester, we start with Bagging for classification problem. Bagging is a method which use bootstrap to reduce the variance. Though bagging can improve the predictive accuracy, it may be difficult to interpret since it's impossible to represent the results as a single tree. In the classification setting, we used Gini index to obtain the variable importance information, predictors with the larger total decrease in the Gini index are considered more important. Here, we use caret to do grid search, then choose the node size with the highest ROC value.
+
+* After analyzing the variable importance in the bagging model, we realize that the variable `ram` is of great importance, which may cause bagging less valid in decreasing the variance since all of the bagged trees will look quite similar with top split at `ram`. Therefore, we fit a random forest model, which is an improved method of bagging by decorrelating the trees. It only consider a subset of predictors at each split so as to make the bagged trees less correlated with each other. After grid search, the optimal random forest model is to use 8 random selected predictors in each split, with a minimum node size 6.
+
+* Next, because the outcome of the mobile dataset is binary, we fit a gbm model to do boosting. Boosting is quite similar to bagging except it build trees using information from the previous tree. There are three tuning parameters in boosting: The number of trees B, which are selected using cross-validation; Shrinkage parameter $\lambda$ which controls the learning rate; And d, the number of splits in each tree which controls the complexity. From the result, we can see that the optimal situation is reached when B = 5000, $\lambda$ = 0.002, d = 5.
+
+* Now consider to fit another classic classification model: support vector machine with radical kernel. There are two tuning parameters for SVM, cost and sigma. Here, we only tune on cost.
 
 * In order to predict the high cost phone, we decided to build a binary classification model. We randomly divided our dataset into two data sets before training the classification algorithms: the training and the test sets. The training and test sets each included 80% and 20% of the total data, respectively. 
 
