--- a/CellPhone_finalcode.Rmd
+++ b/CellPhone_finalcode.Rmd
@@ -291,7 +291,7 @@ barplot(sort(ranger::importance(bagging.final.imp), decreasing = FALSE),
 ### Random forest
 
 ```{r }
-rf.grid <- expand.grid(mtry = 1:8, 
+rf.grid <- expand.grid(mtry = seq(2,16,2), 
                        splitrule = "gini",
                        min.node.size = seq(from = 2, to = 10, by = 2))
 set.seed(1) 
@@ -312,7 +312,7 @@ ggplot(rf.fit, highlight = TRUE)
 ### AdaBoost
 
 ```{r }
-gbm.grid <- expand.grid(n.trees = c(2000,3000,4000,5000), 
+gbm.grid <- expand.grid(n.trees = c(2000,4000,5000), 
                         interaction.depth = 1:6, 
                         shrinkage = c(0.0005,0.001,0.002), 
                         n.minobsinnode = 1)
